--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx --watch src/index.ts",
+    "ability": "tsx src/ability.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
