--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "casl-test",
+  "name": "@betalyra/sorry-dave",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "tsx --watch src/index.ts",
     "ability": "tsx src/ability.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@casl/ability": "^6.7.3",
-    "@standard-schema/spec": "^1.0.0",
-    "effect": "^3.13.6",
-    "zod": "^3.24.2"
+    "@standard-schema/spec": "^1.0.0"
+  },
+  "peerDependencies": {
+    "effect": "^3.13.6"
   },
   "devDependencies": {
+    "@effect/vitest": "^0.19.5",
     "@total-typescript/tsconfig": "^1.0.4",
     "tsx": "^4.19.3",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "vitest": "^3.0.8",
+    "zod": "^3.24.2"
   },
   "type": "module"
 }
