--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "@betalyra/sorry-dave",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Simple authorisation library for effect-ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "tsx --watch src/index.ts",
+    "build": "tsc",
     "ability": "tsx src/ability.ts",
     "test": "vitest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "authorisation",
+    "capabilities",
+    "effect",
+    "effect-ts"
+  ],
+  "author": "Jan Schulte",
+  "license": "MIT",
+  "type": "module",
   "dependencies": {
     "@standard-schema/spec": "^1.0.0"
   },
@@ -25,5 +33,5 @@
     "vitest": "^3.0.8",
     "zod": "^3.24.2"
   },
-  "type": "module"
+  "repository": "https://github.com/betalyra/sorry-dave.git"
 }
