--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,7 @@ jobs:
       - name: Build
         run: pnpm build
 
-      - name: Publish
-        run: pnpx pkg-pr-new publish './*'
+      - name: Test
+        run: pnpm test
+      # - name: Publish
+      #   run: pnpx pkg-pr-new publish './*'
