--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@effect/vitest": "^0.19.5",
     "@total-typescript/tsconfig": "^1.0.4",
+    "pkg-pr-new": "^0.0.40",
     "tsx": "^4.19.3",
     "typescript": "5.8.2",
     "vitest": "^3.0.8",
